--- a/Istio_traffic_shifting_3_services/node-rest/package.json
+++ b/Istio_traffic_shifting_3_services/node-rest/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
+    "util": "^0.11.1"
   }
 }
